--- a/DC2 - NLP Disaster Tweets.ipynb
+++ b/DC2 - NLP Disaster Tweets.ipynb
@@ -67,8 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv(\"./train.csv\")\n",
-    "df_test = pd.read_csv(\"./test.csv\")"
+    "df_train = pd.read_csv(\"./data/train.csv\")\n",
+    "df_test = pd.read_csv(\"./data/test.csv\")"
    ]
   },
   {
